# ChessMate

./: HRI_publisher.py  README.md  big_square_finder.py  board_sensor.py  button.ino  chessboard_middle_point_finder_finder.py  cornerdetection.py  game_controller.py  get_pos.py  motion_controller.py  move_detect_tracking.py  movit_deneme.py  only_corners.py  panda.urdf  ros2depth.py  small_square_finder.py  takePic.py  take_calib_images.py  yoloDetectROS.py  yolov8Detect.py  yolov8Detect_v2.py  yolov8Detect_v3.py
10agustos/: board_sensor.py  game_controller.py  motion_controller.py
TestScriptsNew/: board_sensor.py  game_controller.py  motion_controller.py
agustos9/: board_sensor.py  game_controller.py  motion_controller.py
camera_calib/: take_calib_images.py  yolov8Detect_v2.py
camera_calib/camera_data/: cam_mtx.npy  dist.npy  objp.npy
franka_gazebo/models/chess_board/: model.config  model.sdf
franka_gazebo/world/: stone.sdf
middle point detection/: cornerdetection.py
panda_chess/: CMakeLists.txt  README  package.xml
panda_chess/src/: board_sensor.py  game_controller.py  motion_controller.py  motion_controller_V01.py  motion_controller_real_robot(notworking).py  turn_controller.py
panda_chess/srv/: board_sensor.srv
panda_moveit_config/launch/: demo_gazebo.launch
presentation/: ChessMate.pptx
test_find_realworld_xyz/: camera_realworldxyz.py  detect distance.py  image_recognition_singlecam.py  initial_perspective_calibration.py  yolov8Detect.py
test_xyz/: initial_camera_calibration.py  yolov8Detect_v2.py
(+9 files in other folders)
